# dg-middleware

./: AUTHORS  CMakeLists.txt  INSTALL  NEWS  README.md  index.html
CMakeModules/: UseOmniORB4.cmake
debian/: changelog  control  copyright  libdg-middleware-dev.install  libdg-middleware-dgb.install  libdg-middleware-doc.doc-base  libdg-middleware-doc.install  libdg-middleware1.0.0.99.install  libdg-middleware1.2.1.install  rules  shlibs
doc/: CMakeLists.txt  Doxyfile.extra.in  Makefile  cmake_install.cmake  dg-coshell.pod  dg-coshell.pod.in  footer.html  header.html  package.dox  package.dox.cmake
doc/additionalDoc/: package.hh
doc/pictures/: footer.txt
doxygen/HEAD/: a00006.html  a00007.html  a00008.html  a00009.html  a00010.html  a00011.html  a00012.html  a00013.html  a00014.html  a00015.html  a00016.html  a00017.html  a00018.html  a00019.html  a00020.html  a00021.html  a00022.html  a00024.map  a00024.md5  a00025.map  a00025.md5  a00026.map  a00026.md5  a00028.map  a00028.md5  a00029.map  a00029.md5  a00030.map  a00030.md5  a00031.map  a00031.md5  a00032.map  a00032.md5  a00033.map  a00033.md5  a00034.map  a00034.md5  a00035.md5  a00038.html  a00038.map  (+165 more)
doxygen/HEAD/search/: all_61.html  all_62.html  all_63.html  all_64.html  all_65.html  all_66.html  all_67.html  all_68.html  all_69.html  all_6a.html  all_6b.html  all_6c.html  all_6d.html  all_6e.html  all_6f.html  all_70.html  all_72.html  all_73.html  all_74.html  all_75.html  all_77.html  all_7e.html  classes_63.html  classes_64.html  classes_65.html  classes_66.html  classes_69.html  classes_6e.html  classes_6f.html  classes_70.html  classes_73.html  classes_74.html  defines_68.html  enums_64.html  enums_65.html  enums_73.html  enums_74.html  enumvalues_63.html  enumvalues_67.html  files_61.html  (+63 more)
include/: CMakeLists.txt
include/dg-middleware/: common.idl  corba-server-generic.h  corba-server-generic.t.cpp  corba.hh  distant-shell.h  exception-dgm.h  server-abstract.h  server-command-corba.idl  server-command.h
src/: CMakeLists.txt  CORBAReference.h  corba-server-generic.cpp  distant-shell.cpp  exception-dgm.cpp  server-abstract.cpp  server-command.cpp
unitTesting/: CMakeLists.txt  CorbaConnection.cpp  CorbaConnection.h  connecttoshell.cpp  connecttoshell.h  coshell.cpp  dummy.cpp  test_corba_shell.cpp
